apps/services/paperless-ngx/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
  labels:
    app: paperless-ngx
spec:
  selector:
    app: paperless-ngx
  ports:
    - name: web
      port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
